cleaned up the form styling.

--- a/partials/campaign_info.html
+++ b/partials/campaign_info.html
@@ -12,7 +12,7 @@
   </div>
 </header>
 
-<div class="scroller_wrapper">
+<div class="scroller_wrapper  with_header_padding">
   <div class="scroller">
     <section>
       <h3>Notifications</h3>
