--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -9,7 +9,7 @@
   <h1>{{title}}</h1>
 </header>
 
-<div class="scroller_wrapper">
+<div class="scroller_wrapper  with_header_padding">
   <section class="scroller">
     <button href="#/new" class="btn full_width" ng-click="toggleNewMode()" ng-show="!new_mode">+ New Campaign</button>
     <div ng-show="new_mode">
