--- a/partials/index.html
+++ b/partials/index.html
@@ -1,7 +1,7 @@
 <header>
   <input type="text" name="search" ng-model="search_query" />
 </header>
-<div class="scroller_wrapper">
+<div class="scroller_wrapper  with_header_padding">
   <div class="scroller">
     <ul class="object_list">
       <li ng-repeat="campaign in searchListings | filter:search_query">
