--- a/partials/instances.html
+++ b/partials/instances.html
@@ -10,7 +10,7 @@
     </ul>
   </div>
 </header>
-<div class="scroller_wrapper">
+<div class="scroller_wrapper  with_header_padding">
   <div class="scroller">
     <p ng-show="viewCampaign.instances == []">empty!</p>
     <ul class="instances">
