--- a/partials/rewards.html
+++ b/partials/rewards.html
@@ -7,7 +7,7 @@
   <h1>{{title}}</h1>
 </header>
 
-<div class="scroller_wrapper">
+<div class="scroller_wrapper  with_header_padding">
   <section class="scroller">
     <ul class="object_list">
       <li ng-repeat="reward in rewardsList">
