--- a/css/app.css
+++ b/css/app.css
@@ -94,7 +94,6 @@ main {
   opacity:.5;
 }
 
-
 .focus {
   -webkit-transform: translateX(0%);
   opacity: 1;
@@ -106,8 +105,11 @@ main {
   transform: translateX(80%);
 }
 
-.scroller_wrapper {
+.scroller_wrapper.with_header_padding {
   padding-top: 40px;
+}
+
+.scroller_wrapper {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -132,6 +134,8 @@ main {
 .card {
   background-color: #ffffff;
 }
+
+/* @group Header Stuff */
 
 header {
   position: absolute;
@@ -188,7 +192,9 @@ header .btn {
   transform: translateY(-200%);
 }
 
-h2, h3, h4, h5 {
+/* @end */
+
+h1, h2, h3, h4, h5 {
   margin: 0;
 }
 
@@ -279,7 +285,7 @@ p {
 }
 
 .main_nav h3 {
-  margin-top: 30px;
+  margin-top: 30px; 
 }
 
 .main_nav li:hover {
@@ -381,8 +387,6 @@ nav a {
   margin-left: 20px;
   font-size: .9em;
   border-left: 3px solid #545554;
-  -webkit-transition: all linear 1s;
-  
 }
 
 .reply {
@@ -393,8 +397,40 @@ nav a {
   margin-bottom: 0;
 }
 
+/* @group Form Stuff */
+
 form.reply {
   padding-left: 20px;
+}
+
+form h3 {
+  margin: 2em 0 .4em;
+  font-weight: normal;
+  font-style: normal;
+}
+
+form li:first-of-type h3 {
+  margin-top: 1em;
+}
+
+fieldset.padded {
+  padding: 20px 0;
+}
+
+.answers li {
+  margin: .3em 0;
+}
+
+.answers label {
+  padding-left: .3em;
+}
+
+.answers .inline input {
+  margin-left: 1em;
+}
+
+.answers li.inline:first-of-type input {
+  margin-left: 0;
 }
 
 .btn {
@@ -413,6 +449,8 @@ form.reply {
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
 }
+
+/* @end */
 
 .btn_set.vert .btn {
   display: block;
