--- a/partials/history.html
+++ b/partials/history.html
@@ -2,7 +2,7 @@
   <button ng-click=toggleSidebar('left') class="btn left">menu</button>
   <h1>Fdbk History</h1>
 </header>
-<div class="scroller_wrapper">
+<div class="scroller_wrapper  with_header_padding">
   <div class="scroller">
     <p ng-show="userDetails.instances == []">empty!</p>
     <ul class="instances">
