--- a/partials/inbox.html
+++ b/partials/inbox.html
@@ -2,7 +2,7 @@
   <button ng-click="toggleSidebar('left')" class="btn left">menu</button>
   <h1 ng-bind="title"></h1>
 </header>
-<div class="scroller_wrapper">
+<div class="scroller_wrapper  with_header_padding">
   <div class="scroller">
     <ul class="instances" ng-repeat="campaign in campaignList">
       <li ng-repeat="instance in campaign.instances" class="instance">
