--- a/partials/instance.html
+++ b/partials/instance.html
@@ -3,7 +3,7 @@
   <h2>{{editCampaign.title}}</h2>
 </header>
 
-<div class="scroller_wrapper">
+<div class="scroller_wrapper  with_header_padding">
   <div class="scroller">
     <h2>{{editCampaign.title}}</h2>
       <div class="instance">
