--- a/partials/reward_info.html
+++ b/partials/reward_info.html
@@ -3,7 +3,7 @@
   <h1>{{title}}</h1>
 </header>
 
-<div class="scroller_wrapper">
+<div class="scroller_wrapper  with_header_padding">
   <section class="scroller">
     <h2 ng-bind="viewReward.title"></h2>
     <dl>
