--- a/partials/settings.html
+++ b/partials/settings.html
@@ -3,7 +3,7 @@
   <h1 ng-bind="title"></h1>
 </header>
 
-<div class="scroller_wrapper">
+<div class="scroller_wrapper  with_header_padding">
   <section class="scroller">
     <h2>Profile</h2>
     <fieldset>
