--- a/partials/new.html
+++ b/partials/new.html
@@ -1,8 +1,12 @@
+<aside id="palette" view="panel">
+  <div ng-include src="'partials/panel.html'"></div>
+</aside>
+
 <section id="new">
   <header>
     <a href="#/dashboard" class="btn left">cancel</a>
     <a ng-click='advanceStep()' ng-hide='currentStep >= (steps.length-1)' class="btn right">Next Step</a>
-    <a href="#/dashboard" ng-show='currentStep >= (steps.length-1)' ng-click="activateCampaign()" class="btn right">Activate Campaign</a>
+    <a href="#/dashboard" ng-show='currentStep >= (steps.length-1)' ng-click="activateCampaign(buildCampaign['id'])" class="btn right">Activate Campaign</a>
     <h2>Create New Campaign: Step {{steps[currentStep]+1}}</h2>
   </header>
   
@@ -73,16 +77,6 @@
               </li>
             </ol>
             <button ng-click="togglePanel('Create Question')" class="btn">+ New Question</button>
-<!--            <div class="horizontal_scroller">
-              <ol class="templates">
-                <li>
-                  <button class="btn inline" ng-click="chooseTemplate('blank')">blank</button>
-                </li>
-                <li>
-                  <button class="btn inline" ng-click="chooseTemplate('business')">business</button>
-                </li>
-              </ol>
-            </div>-->
           </div>
           <div ng-switch-when='1'>
             <form method="post" action="">
