condensed a lot of controllers. no "new" template, just "edit" sidebar for campaigns is now actually a sidebar. still need to let it know which campaign it is for, though.

--- a/partials/campaign_info.html
+++ b/partials/campaign_info.html
@@ -1,6 +1,6 @@
 <header>
   <button ng-click='toggleSidebar('left')' class="btn left">menu</button>
-  <button ng-click="toggleHeaderDropdown()" class="btn right"> . . . </button>
+  <button ng-click="toggleSidebar('right')" class="btn right"> . . . </button>
   <h2 ng-bind="editCampaign.title"></h2>
   <div class="dropdown closed">
     <ul>
