--- a/partials/instances.html
+++ b/partials/instances.html
@@ -1,6 +1,6 @@
 <header>
   <a href="#/dashboard" class="btn left">Dashboard</a>
-  <button class="btn right" ng-click="toggleHeaderDropdown()"> . . . </button>
+  <button class="btn right" ng-click="toggleSidebar('left')"> . . . </button>
   <h1 ng-bind="title"></h1>
   <div class="dropdown closed">
     <ul>
