--- a/partials/rewards.html
+++ b/partials/rewards.html
@@ -1,5 +1,5 @@
 <header>
-  <button ng-click=toggleSidebar('left') class="btn left">menu</button>
+  <button ng-click=toggleSidebar('right') class="btn left">menu</button>
   <button ng-click="toggleEditMode()" class="btn right" ng-switch on="edit_mode">
     <span ng-switch-when="false">edit</span>
     <span ng-switch-when="true">done</span>
