--- a/css/app.css
+++ b/css/app.css
@@ -100,9 +100,9 @@ main {
 }
 
 .slide_left {
-  -webkit-transform: translateX(80%);
-  -moz-transform: translateX(80%);
-  transform: translateX(80%);
+  -webkit-transform: translateX(-80%);
+  -moz-transform: translateX(-80%);
+  transform: translateX(-80%);
 }
 
 .scroller_wrapper.with_header_padding {
@@ -266,8 +266,7 @@ p {
   padding: 4px 0;
 }
 
-.main_nav {
-  opacity: 0;
+.sidebar {
   position: absolute;
   width: 100%;
   padding: 20px;
@@ -276,24 +275,28 @@ p {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-transition: all 500ms ease-in-out;
-  -moz-transition: all 500ms ease-in-out;
-  -ms-transition: all 500ms ease-in-out;
-  -o-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
     -webkit-transform: translate3d(0, 0, 0);
 }
 
-.main_nav h3 {
+.second_nav {
+  text-align: right;
+}
+
+.sidebar h3 {
   margin-top: 30px; 
 }
 
-.main_nav li:hover {
+.sidebar li:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
 .visible {
   opacity: 1;
+}
+
+.invisible {
+  opacity: 0;
+  display: none;
 }
 
 nav a {
@@ -591,7 +594,7 @@ fieldset {
 
 label {
   display: block;
-  margin: 10px 0;
+  margin: 10px 0 4px;
 }
 
 input[type=text], input[type=email], input[type=number], input[type=date], input[type=password], textarea {
@@ -611,6 +614,7 @@ input[type=text], input[type=email], input[type=number], input[type=date], input
   -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.39), inset 0 1px 2px rgba(0, 0, 0, 0.18);
   -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.39), inset 0 1px 2px rgba(0, 0, 0, 0.18);
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.39), inset 0 1px 2px rgba(0, 0, 0, 0.18);
+  color: #303030;
 }
 
 textarea {
@@ -624,11 +628,10 @@ textarea {
   -webkit-transform: translateX(-100%);
 }
 
-.page.slide_right {
-  -webkit-transform: translateX(100%);
-  -moz-transform: translateX(100%);
-  transform: translateX(100%);
-  opacity: .8;
+.slide_right {
+  -webkit-transform: translateX(80%);
+  -moz-transform: translateX(80%);
+  transform: translateX(80%);
 }
 
 
