--- a/partials/campaign_new.html
+++ b/partials/campaign_new.html
@@ -2,7 +2,7 @@
   <a href="#/dashboard" class="btn left">cancel</a>
   <a ng-click='advanceStep()' ng-hide='currentStep >= (steps.length-1)' class="btn right">Next Step</a>
   <a href="#/dashboard" ng-show='currentStep >= (steps.length-1)' class="btn right">Save Changes</a>
-  <h2 ng-click="toggleHeaderDropdown()">Edit Campaign #1: Step {{steps[currentStep]+1}}</h2>
+  <h2 ng-click="toggleSidebar('right')">Edit Campaign #1: Step {{steps[currentStep]+1}}</h2>
   <nav class="header_dropdown closed">
     <ol>
       <li ng-repeat='n in steps' ng-click='changeStep(n)'>Step {{n+1}}</li>
