--- a/partials/edit.html
+++ b/partials/edit.html
@@ -1,9 +1,13 @@
+<aside id="palette" view="panel">
+  <div ng-include src="'partials/panel.html'"></div>
+</aside>
+
 <section id="page_02">
   <header>
-    <a href="#/campaign/{{editCampaign.id}}/instances" class="btn left">cancel</a>
+    <a href="#/campaign/{{buildCampaign.id}}/instances" class="btn left">cancel</a>
     <a ng-click='advanceStep()' ng-hide='currentStep >= (steps.length-1)' class="btn right">Next Page</a>
-    <a href="#/campaign/{{editCampaign.id}}" ng-show='currentStep >= (steps.length-1)' class="btn right" ng-click="saveChanges()">Save Changes</a>
-    <h2>Edit {{editCampaign.title}}: Step {{steps[currentStep]+1}}</h2>
+    <button ng-show='currentStep >= (steps.length-1)' class="btn right" ng-click="saveChanges()">Save Changes</button>
+    <h2>Edit {{buildCampaign.title}}: Step {{steps[currentStep]+1}}</h2>
   </header>
   
 <div class="scroller_wrapper  with_header_padding">
@@ -11,11 +15,9 @@
     <ol class="breadcrumbs five_btns btnset">
       <li ng-class="{selected: currentStep==n}" class="crumb btn" ng-repeat='n in steps' ng-click='changeStep(n)'>{{n+1}}</li>
     </ol>
-    
-    <a href="#/campaign/{{editCampaign.id}}/instances" ng-click="saveChanges()">Save Changes</a>
   </nav>
   <div class="scroller">
-      <h2>{{editCampaign.title}}</h2>
+      <h2>{{buildCampaign.title}}</h2>
       <section ng-switch on='currentStep'>
           <div ng-switch-when='0'>
             <div ng-include src="'partials/list_of_questions.html'"></div>
@@ -23,10 +25,10 @@
           </div>
         <div ng-switch-when='1'>
           <form method="post" action="">
-            <input type="text" name="title" ng-model="editCampaign.reward.title" placeholder="Gift Title" />
-            <input type="text" name="description" ng-model="editCampaign.reward.description" placeholder="Description"/>
-            <input type="text" name="terms" ng-model="editCampaign.reward.terms" placeholder="Terms and Conditions"/>
-            <input type="date" name="expiration" ng-model="editCampaign.reward.exp" placeholder="Expiration Date" />
+            <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title" />
+            <input type="text" name="description" ng-model="buildCampaign.reward.description" placeholder="Description"/>
+            <input type="text" name="terms" ng-model="buildCampaign.reward.terms" placeholder="Terms and Conditions"/>
+            <input type="date" name="expiration" ng-model="buildCampaign.reward.exp" placeholder="Expiration Date" />
           </form>
         </div>
         <div ng-switch-when='2'>
@@ -38,7 +40,7 @@
         </div>
         
         <div ng-switch-when='3'>
-          <form ng-submit="sendInvite(first, last, invite_email, level, editCampaign.permissions.pending)">
+          <form ng-submit="sendInvite(first, last, invite_email, level, buildCampaign.permissions.pending)">
             <label for="emails">Send email invitations to others to help manage this campaign.</label>
             <input ng-model="first" type="text" name="name" placeholder="first name"/>
             <input ng-model="last" type="text" name="name" placeholder="last name"/>
@@ -56,13 +58,13 @@
           <hr>
           <h2>Permissions set:</h2>
           <ul>
-            <li ng-repeat="person in editCampaign.permissions.accepted">
+            <li ng-repeat="person in buildCampaign.permissions.accepted">
               {{person.first}} {{person.last}} <small class="status">permission level: {{person.level}}</small>
             </li>
           </ul>
           <h2>Pending Invites:</h2>
           <ul>
-            <li ng-repeat="person in editCampaign.permissions.pending">
+            <li ng-repeat="person in buildCampaign.permissions.pending">
               {{person.first}} {{person.last}} ({{person.email}}, {{person.level}}) <small class="status">pending...</small><button class="btn right clear">resend</button>
             </li>
           </ul>
