--- a/partials/history.html
+++ b/partials/history.html
@@ -1,5 +1,5 @@
 <header>
-  <button ng-click=toggleSidebar('left') class="btn left">menu</button>
+  <button ng-click=toggleSidebar('right') class="btn left">menu</button>
   <h1>Fdbk History</h1>
 </header>
 <div class="scroller_wrapper  with_header_padding">
