--- a/css/app.css
+++ b/css/app.css
@@ -21,6 +21,13 @@ ul, ol {
   margin: 0;
 }
 
+dt, dd { display: inline; margin: 0; }
+
+dd:after {
+	content: '\A';
+	white-space: pre;
+}
+
 main {
   background-color: #e0e0e0;
   position: absolute;
@@ -59,39 +66,54 @@ main {
   background-color: #000000;
 }
 
+/* @group Dimmer animation */
+
 .dimmer {
   width: 100%;
   height: 100%;
-  position: relative;
-  z-index: 100;
-  opacity: .5;
-  -webkit-transition: all 500ms ease-in-out;
-  -moz-transition: all 500ms ease-in-out;
-  -ms-transition: all 500ms ease-in-out;
-  -o-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-  background-color: #000000;
+  z-index: 1000;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.fade-hide-setup, .fade-show-setup {
-  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+.fade-show,
+.fade-hide {
+-webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+-moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+-ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+-o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+}
+ 
+.fade-hide.fade-hide-active,
+.fade-show {
+opacity: 0;
+}
+ 
+.fade-show.fade-show-active,
+.fade-hide {
+opacity: 1;
 }
 
-.fade-hide-setup {
-  opacity:.5;
-}
-.fade-hide-setup.fade-hide-start {
-  opacity:0;
-}
+/* @end */
 
-.fade-show-setup {
-  opacity:0;
+.slide-enter,
+.slide-leave {
+-webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+-moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+-ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+-o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
 }
-.fade-show-setup.fade-show-start {
-  opacity:.5;
+ 
+.slide-leave.slide-leave-active,
+.slide-enter {
+opacity: 0;
+}
+ 
+.slide-enter.slide-enter-active,
+.slide-leave {
+opacity: 1;
 }
 
 .focus {
@@ -241,6 +263,13 @@ p {
   border-radius: 0;
   background-color: transparent;
   color: #545554;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.btnset .btn:first-of-type {
+  border-left-style: solid;
 }
 
 .btnset .btn.selected {
@@ -250,15 +279,19 @@ p {
 .five_btns .btn {
   width: 20%;
   padding: 10px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   border: 1px solid #606060;
   border-left: none;
 }
 
+.two_btns .btn {
+  width: 50%;
+  padding: 10px;
+  border: 1px solid #606060;
+  border-left-style: none;
+}
+
 .crumb:last-of-type {
-  border-right: none;
+  border-right-style: none;
 }
 
 .templates li {
