--- a/partials/campaign_reward_info.html
+++ b/partials/campaign_reward_info.html
@@ -9,10 +9,39 @@
     <dl>
       <dt>Description:</dt>
       <dd ng-bind="viewReward.description"></dd>
+      
       <dt>Terms:</dt>
       <dd ng-bind="viewReward.terms"></dd>
+      
+      <dt>Owner:</dt>
+      <dd ng-bind="viewReward.owner"></dd>
+      
+      <dt>Original Conversation:</dt>
+      <dd><a href="#/campaign/{{campaignId}}/instances/{{viewReward.instanceId}}" ng-bind="viewReward.instanceId"></a></dd>
+      
+      <dt>Secret Code:</dt>
+      <dd ng-bind="viewReward.passphrase"></dd>
+      
+      <dt>Expires:</dt>
+      <dd ng-bind="viewReward.exp_date"></dd>
+      
+      <dt>Date Issued:</dt>
+      <dd ng-bind="viewReward.date_issued"></dd>
+      
+      <dt>Date Claimed:</dt>
+      <dd ng-bind="viewReward.date_claimed"></dd>
+      
+      <dt>Shared with:</dt>
+      <dd>
+        <ul>
+          <li ng-repeat="user in viewReward.shared_with" ng-bind="user"></li>
+        </ul>
+      </dd>
+      
+      <dt>Verified by:</dt>
+      <dd ng-bind="viewReward.verified"></dd>
     </dl>
-    <button ng-click="claimReward(viewReward)" class="btn {{!viewReward.claimed || 'claimed'}}">claim</button>
-    <button class="btn" ng-click="togglePanel('share')">share</button>
+        <button ng-click="claimReward(viewReward)" class="btn" ng-class="{claimed: viewReward.date_claimed != false}">claim</button>
+    
   </section>
 </div>
