--- a/partials/campaign_rewards.html
+++ b/partials/campaign_rewards.html
@@ -4,7 +4,7 @@
   <h1 ng-bind="title"></h1>
 </header>
 
-<div class="scroller_wrapper  with_header_padding">
+<div class="scroller_wrapper with_header_padding">
   <section class="scroller">
     
     <div class="btnset two_btns">
@@ -21,18 +21,22 @@
         <li>No rewards have been redeemed this month.</li>
       </ul>
     </div>
+    
+    <input type="text" ng-model="search_query" placeholder="search names or seacret codes"/>
     <ul class="object_list">
-      <li ng-repeat="reward in rewardsList">
-        <div ng-show="edit_mode == true">
-          <button class="btn right" ng-click="deleteListItem(reward, rewardsList)">delete</button>
-        </div>
+      <li ng-repeat="reward in rewardsList | filter:search_query">
+        <button class="btn right" ng-click="claimReward(reward)" class="btn" ng-class="{claimed: reward.date_claimed != false}">redeem</button>
         <a href="#/campaign/{{campaignId}}/rewards/{{reward.id}}">
           <h2 ng-bind="reward.title"></h2>
           <dl>
             <dt>Owner:</dt>
             <dd ng-bind="reward.owner"></dd>
-            <dt>Date Issued:</dt>
-            <dd ng-bind="reward.date_issued"></dd>
+            <dt ng-show="rewardsView == 'open'">Issued:</dt>
+            <dd ng-show="rewardsView == 'open'" ng-bind="reward.date_issued"></dd>
+            <dt ng-show="rewardsView == 'open'">Secret Code:</dt>
+            <dd ng-show="rewardsView == 'open'" ng-bind="reward.passphrase"></dd>
+            <dt ng-show="rewardsView == 'closed'">Date Redeemed:</dt>
+            <dd ng-show="rewardsView == 'closed'"ng-bind="reward.claimed"></dd>
           </dl>
         </a>
       </li>
