--- a/partials/instances.html
+++ b/partials/instances.html
@@ -3,53 +3,61 @@
   <button class="btn right" ng-click="toggleSidebar('left')"> . . . </button>
   <h1 ng-bind="title"></h1>
 </header>
-<div class="scroller_wrapper  with_header_padding">
+<div class="scroller_wrapper with_header_padding">
   <div class="scroller">
     <p ng-show="viewCampaign.instances == []">empty!</p>
     <ul class="instances">
-      <li ng-repeat="instance in viewCampaign.instances" class="instance" ng-controller="instanceCtr">
-        <aside class="btn_set vert">
-          <button class="btn">!</button>
-        </aside>
-        <article class="card">
-          <button ng-click="hearIt(instance)" class="btn heard heard_{{instance.heard}}" ui-if="instance.author != 'You'">heard!</button>
-          <h4><a href="#/campaign/{{viewCampaign.id}}/contacts/{{instance.author}}" ng-bind="author.name"></a></h4>
-          <time ng-bind="instance.time"></time>
-          <p ng-bind="instance.text" ng-click="expandReplies($index)"></p>
-          <ul class="replies" ng-show="isExpanded($index) && instance.comments[2]">
-            <li ng-repeat="comment in instance.comments | limitTo:(instance.comments.length-2)" class="reply">
-              <button ng-click="hearIt(comment)" class="btn heard heard_{{comment.heard}}" ui-if="comment.author != 'You'">heard!</button>
-              <h5>
-                <span ui-if="comment.author != 'You'" ng-bind="author.name"></span>
-                <span ui-if="comment.author == 'You'">You</span>
-              </h5>
-              <p ng-bind="comment.text"></p>
-            </li>
-          </ul>
-          <ul class="replies">
-            <li class="reply" ng-show="instance.comments[(instance.comments.length-2)]">
-              <button ng-click="hearIt(instance.comments[(instance.comments.length-2)])" class="btn heard heard_{{instance.comments[(instance.comments.length-2)].heard}}" ui-if="instance.comments[(instance.comments.length-2)].author != 'You'">heard!</button>
-              <h5>
-                <span ui-if="instance.comments[(instance.comments.length-2)].author != 'You'" ng-bind="author.name"></span>
-                <span ui-if="instance.comments[(instance.comments.length-2)].author == 'You'">You</span>
-              </h5>
-              <p ng-bind="instance.comments[(instance.comments.length-2)].text"></p>
-            </li>
-            <li class="reply" ng-show="instance.comments[(instance.comments.length-1)]">
-              <button ng-click="hearIt(instance.comments[(instance.comments.length-1)])" class="btn heard heard_{{instance.comments[(instance.comments.length-1)].heard}}" ui-if="instance.comments[(instance.comments.length-1)].author != 'You'">heard!</button>
-              <h5>
-                <span ui-if="instance.comments[(instance.comments.length-1)].author != 'You'" ng-bind="author.name"></span>
-                <span ui-if="instance.comments[(instance.comments.length-1)].author == 'You'">You</span>
-              </h5>
-              <p ng-bind="instance.comments[(instance.comments.length-1)].text"></p>
-            </li>
-          </ul>
-          <form class="reply" ng-submit="addReply(newCommentText, instance.comments)">
-            <input type="text" name="new_comment" ng-model="newCommentText" />
-            <button class="btn"type="submit">reply</button>
-          </form>
-        </article>
-      </li>
+      <li ng-repeat="instance in viewCampaign.instances" class="instance" ng-controller="instanceCtr" ng-include src="'partials/instance.html'"></li>
     </ul>
   </div>
 </div>
+<aside class="tools_panel" ng-class="{visible: conversationDetailView == true}">
+  <header>
+    <button ng-click="toggleToolPanel()">close</button>
+  </header>
+  <div class="scroller_wrapper with_header_padding">
+    <div class="scroller">
+      <h1>Collaboration Tools</h1>
+      <dl>
+        <dt>importance:</dt>
+        <dd ng-bind="viewConversation.importance"></dd>
+        <dt>tags:</dt>
+        <dd>
+          <ul>
+            <li ng-repeat="tag in viewConversation.tags">
+              <span ng-bind="tag"></span><span ng-click="removeTag(tag, viewConversation.tags)">[x]</span>
+            </li>
+          </ul>
+          <form ng-submit="addTag(tag_to_submit, viewConversation.tags)">
+            <input type="text" ng-model="tag_to_submit" />
+            <button type="submit">save tag</button>
+          </form>
+        </dd>
+        <dt>tagged users:</dt>
+        <dd>
+          <ul>
+            <li ng-repeat="user in viewConversation.tagged_users">
+              <span ng-bind="user"></span><span ng-click="removeTag(user, viewConversation.tagged_users)">[x]</span>
+            </li>
+          </ul>
+          <form ng-submit="addTag(user_to_submit, viewConversation.tagged_users)">
+            <input type="text" ng-model="user_to_submit" />
+            <button type="submit">save tag</button>
+          </form>
+        </dd>
+        <dt>Notes:</dt>
+        <dd>
+          <ul>
+            <li ng-repeat="comment in viewConversation.comments">
+              <span ng-bind="comment.text"></span>
+            </li>
+          </ul>
+          <form ng-submit="addComment(comment_text, viewConversation.comments)">
+            <input type="text" ng-model="comment_text"/>
+            <button type="submit">save comment</button>
+          </form>
+        </dd>
+      </dl>
+    </div>
+  </div>
+</aside>
