Added function to handle one time events. Currently using this for the tools panel on the instances page.
fixed issue in Firefox where text would not show up in text inputs.

--- a/partials/instances.html
+++ b/partials/instances.html
@@ -13,7 +13,7 @@
 </div>
 <aside class="tools_panel" ng-class="{visible: conversationDetailView == true}">
   <header>
-    <button ng-click="toggleToolPanel()">close</button>
+    <button ng-click="toggleToolPanel(undefined, true)">close</button>
   </header>
   <div class="scroller_wrapper with_header_padding">
     <div class="scroller">
