--- a/css/app.css
+++ b/css/app.css
@@ -671,8 +671,8 @@ label {
 input[type=text], input[type=email], input[type=number], input[type=date], input[type=password], textarea {
   display: block;
   width: 100%;
-  height: 1em;
-  padding: 1.4em .8em;
+  height: 40px;
+  padding: 0 10px;
   margin: .5em 0;
   font-size: .8em;
   -webkit-box-sizing: border-box;
