--- a/css/app.css
+++ b/css/app.css
@@ -71,9 +71,24 @@ dd:after {
 .dimmer {
   width: 100%;
   height: 100%;
-  z-index: 1000;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  opacity: 0;
+  display: none;
+  
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+}
+
+.dimmer_clicker {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  
 }
 
 .fade-show,
@@ -325,6 +340,7 @@ p {
 
 .visible {
   opacity: 1;
+  display: inherit;
 }
 
 .invisible {
