--- a/css/app.css
+++ b/css/app.css
@@ -419,8 +419,54 @@ nav a {
   right: 0;
 }
 
-.instances {
+.tag {
+  padding: 2px 6px;
+  border: 1px solid #c8c8c8;
+  border-radius: 4px;
+  margin: 2px;
+  background-color: #ededed;
+}
 
+.tag .close_btn {
+  width: 18px;
+  height: 18px;
+  border-radius: 10px;
+  border-color: rgba(0, 0, 0, 0.56);
+  background-color: rgba(0, 0, 0, 0.25);
+  text-align: center;
+  display: inline-block;
+  color: #ffffff;
+}
+
+.tag .close_btn:hover {
+  background-color: rgba(0, 0, 0, 0.16);
+}
+
+.tag .close_btn:active {
+  background-color: rgba(0, 0, 0, 0.46);
+}
+
+.notes {
+  background-color: #ffffff;
+  padding: 8px;
+}
+
+.notes .note {
+  padding: 8px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.notes .note:last-of-type {
+  border-bottom-style: none;
+}
+
+form {
+  display: block;
+  margin: 0;
+}
+
+.tools_list dt {
+  font-weight: bold;
 }
 
 .instance {
