--- a/css/app.css
+++ b/css/app.css
@@ -110,6 +110,30 @@ opacity: 0;
 opacity: 1;
 }
 
+
+.collapse-enter, 
+.collapse-leave { 
+	-webkit-transition: 400ms ease all;
+	-moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	-ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	-o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	transition: 400ms ease all;
+  display: block;
+} 
+
+.collapse-leave.collapse-leave-active,
+.collapse-enter {
+  
+  opacity: 0;
+  max-height: 0px;
+}
+
+.collapse-enter.collapse-enter-active,
+.collapse-leave {
+  opacity: 1;
+  max-height: 300px;
+}
+
 /* @end */
 
 .slide-enter,
@@ -497,18 +521,48 @@ form {
 }
 
 .replies {
-  padding: 10px;
-  margin-left: 20px;
+  padding: 0;
+  margin: 0 0 0 20px;
   font-size: .9em;
   border-left: 3px solid #545554;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
 }
 
-.reply {
-  margin-bottom: 10px;
+.reply {  
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+  padding: 0 10px 10px;
+}
+
+.reply p {
+  margin: 0;
+}
+
+.reply:first-of-type {
+  padding-top: 0;
 }
 
 .reply:last-of-type {
-  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+input[type="text"].inline {
+  margin-right: 200px;
+  width: 80%;
+}
+
+.btn.inline {
+  float: right;
+  width: 18%;
+  margin: 0 1%;
+  height: 40px;
 }
 
 /* @group Form Stuff */
